<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MFISearch</string>
    <string name="hello_world">Test!</string>
    <string name="action_settings">Settings</string>
    <string name="action_plan">Plan</string>
    <string name="look_bottom">Przeglądaj</string>
    <string name="search_bottom">Wyszukaj</string>
    <string name="soon_class">Pokaż najbliższe zajęcia</string>
    <string name="soon_classes">Pokaż najbliższe zajęcia</string>
    <string name="schedule">Plan zajęć</string>
    <string name="map">Plan wydziału</string>
    <string name="title_activity_show_soon_class">ShowSoonClass</string>
    <string name="title_activity_schedule">Schedule</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_exams">ExamsActivity</string>
    <string name="see_schedule">Przeglądaj plan zajęć</string>
    <string name="edit_schedule">Dodaj zajęcie</string>
    <string name="add_schedule">Dodaj plan zajęć</string>
    <string name="title_activity_view_schedule_actity">ViewScheduleActity</string>
    <string name="title_activity_view_schedule">ViewScheduleActivity</string>
    <string name="check_exam">Przeglądaj egzaminy</string>
    <string name="edit_exam">Edytuje egzamin</string>
    <string name="add_exam">Dodaj egzamin</string>
    <string name="title_activity_check_exam">CheckExamActivity</string>
    <string name="title_activity_edit_exam">EditExamActivity</string>
    <string name="title_activity_add_exam">AddExamActivity</string>
    <string name="title_activity_view_map">ViewMapActivity</string>
    <string name="title_activity_edit_schedule">EditScheduleActivity</string>
    <string name="title_activity_add_schedule">AddScheduleActivity</string>
    <string name="title_activity_find_on_map">FindOnMapActivity</string>
    <string name="search_room">Szukaj</string>
    <string name="view_map">Przeglądaj plan</string>
    <string name="search_on_map">Szukaj</string>
    <string name="choose_lev">Wybierz piętro</string>
    <string name="viewDay">Dzień</string>
    <string name="viewWeek">Tydzień</string>
    <string name="period_add_act">Powtarzalność (w dniach)</string>
    <string name="alternative_map_activity"><![CDATA[lub wybierz salę z listy:]]></string>
    <string name="settings_string">Ustawienia</string>

    <string-array name="levels">
        <item>0</item>
        <item>I</item>
        <item>II</item>

    </string-array>

</resources>
